syntax = "proto3";

import "google/protobuf/timestamp.proto";

//option csharp_namespace = "GrpcPhotosServiceNamespace";

package photosthingpackage;

// The greeting service definition.
service PhotosThing {
  rpc Create (CreateRequest) returns (CreateReply);
  rpc Find(FindRequest) returns (FindReply);
  rpc FindByTitle(FindByTitleRequest) returns (FindByTitleReply);
  rpc GetPhotos(GetPhotosRequest) returns (GetPhotosReply);
  rpc GetPhotosByIds(GetPhotosByIdsRequest) returns (GetPhotosByIdsReply);
  rpc Remove(RemoveRequest) returns (RemoveReply);
  rpc Update(UpdateRequest) returns (UpdateReply);
}

// The request message containing the user's name.
message CreateRequest {
  int32 Id = 1; 
  string Title = 2;
  bytes PhotoFile = 3;
  string ImageMimeType = 4;
  string Description = 5;
  string UserName = 7;
}

// The Create response message containing the Photo.
message CreateReply {
  int32 Id = 1;
  string Title = 2;
  bytes PhotoFile = 3;
  string ImageMimeType = 4;
  string Description = 5;
  google.protobuf.Timestamp CreatedDate = 6;
  string UserName = 7;
}

message FindRequest{
   int32 Id = 1; 
}

message FindReply {
  int32 Id = 1;
  string Title = 2;
  bytes PhotoFile = 3;
  string ImageMimeType = 4;
  string Description = 5;
  google.protobuf.Timestamp CreatedDate = 6;
  string UserName = 7;
}

message FindByTitleRequest{
   string Title = 1; 
}

message FindByTitleReply {
  int32 Id = 1;
  string Title = 2;
  bytes PhotoFile = 3;
  string ImageMimeType = 4;
  string Description = 5;
  google.protobuf.Timestamp CreatedDate = 6;
  string UserName = 7;
}

message GetPhotosRequest{
    int32 Number = 1;
}
message GetPhotosReply {
  repeated GetPhotosReplyItem photos = 1;
}

message GetPhotosReplyItem {
  int32 Id = 1;
  string Title = 2;
  bytes PhotoFile = 3;
  string ImageMimeType = 4;
  string Description = 5;
  google.protobuf.Timestamp CreatedDate = 6;
  string UserName = 7;
}

message GetPhotosByIdsRequest{
    repeated GetPhotosByIdsRequestItem ids = 1;
}

message GetPhotosByIdsRequestItem {
    int32 Id = 1;
}

message GetPhotosByIdsReply {
    repeated GetPhotosByIdsReplyItem photos = 1;
}

message GetPhotosByIdsReplyItem {
  int32 Id = 1;
  string Title = 2;
  bytes PhotoFile = 3;
  string ImageMimeType = 4;
  string Description = 5;
  google.protobuf.Timestamp CreatedDate = 6;
  string UserName = 7;
}

message RemoveRequest{
    int32 Id = 1;
}

message RemoveReply {
  int32 Id = 1;
  string Title = 2;
  bytes PhotoFile = 3;
  string ImageMimeType = 4;
  string Description = 5;
  google.protobuf.Timestamp CreatedDate = 6;
  string UserName = 7;
}

message UpdateRequest {
  int32 Id = 1; 
  string Title = 2;
  bytes PhotoFile = 3;
  string ImageMimeType = 4;
  string Description = 5;
  string UserName = 7;
}

message UpdateReply {
  int32 Id = 1;
  string Title = 2;
  bytes PhotoFile = 3;
  string ImageMimeType = 4;
  string Description = 5;
  google.protobuf.Timestamp CreatedDate = 6;
  string UserName = 7;
}